JumpScript/tests/baselines/reference/pathMappingBasedModuleResolution1_classic.errors.txt
c:/root/jmpconfig.json(5,9): error TS5060: Option 'paths' cannot be used without specifying '--baseUrl' option.


==== c:/root/jmpconfig.json (1 errors) ====
    // paths should error in the absence of baseurl
    
    {
        "compilerOptions": {
            "paths": {
            ~~~~~~~
!!! error TS5060: Option 'paths' cannot be used without specifying '--baseUrl' option.
                "*": [
                    "*",
                    "generated/*"
                ]
            }
        }
    }
    
==== c:/root/f1.jump (0 errors) ====
    export var x = 1;
    